--- a/css/index.css
+++ b/css/index.css
@@ -10,14 +10,12 @@ header {
 body, h1 {
     margin: 0;
 }
-main {
-    margin: 10px;
-}
 .grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(6rem, 0.75fr));
     grid-auto-rows: 0.75fr;
     grid-gap: 20px;
+    margin: 10px;
 }
 .grid::before {
     content: '';
@@ -35,7 +33,7 @@ main {
     margin:auto;
 }
 #nasa {
-    background: url("../img/nasaedit.png");
+    background: url("../img/nasa.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -52,12 +50,22 @@ main {
 }
 #info {
     width: 100%;
-    height: 500px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    text-align: center;
 }
-#infotitle {
-    position: absolute;
-    top: 250px;
-    left: 10%;
+#infotitle, #infop, #features {
     font-family: "qtpi";
-    font-size: 50px;
+}
+#infoimg {
+    border-radius: 50%;
+    border: 3px solid #e84393;
+    margin: auto;
+    clip-path: circle(40%);
+}
+#imgwrap {
+    border: 3px solid #e84393;
+    width: 20%;
 }
